--- a/src/app/home/home-content.component.html
+++ b/src/app/home/home-content.component.html
@@ -23,7 +23,7 @@
 
 <!-- Bouton lien inscription -->
 <div class="container">
-  <a class="btn btn-big block-center" (click)='openForm()' role="button" target="_blank">J'ai un besoin</a>
+  <a class="btn btn-big block-center" (click)='openDialog()' role="button" target="_blank">J'ai un besoin</a>
 </div>
 
 <!-- Footer -->
