modal content ok

--- a/src/app/dialog/dialog-content.component.html
+++ b/src/app/dialog/dialog-content.component.html
@@ -1,5 +1,5 @@
-<div>
-  <h2 md-dialog-title >DIALOG CONTENT</h2>
+<!-- <div> -->
+  <!-- <h2 md-dialog-title >DIALOG CONTENT</h2>
   <hr>
   <md-dialog-content>
     Consequatur delectus nobis enim.
@@ -8,10 +8,13 @@
     Ut est possimus itaque sit ullam inventore.
     <br>
     <strong>{{ data }}</strong>
-  </md-dialog-content>
-  <md-dialog-actions>
+  </md-dialog-content> -->
+
+  <form-inscription></form-inscription>
+
+  <!-- <md-dialog-actions>
     <button md-raised-button (click)='onCloseConfirm()'>CONFIRM</button>
     <button md-raised-button (click)='onCloseCancel()'>CANCEL</button>
-  </md-dialog-actions>
+  </md-dialog-actions> -->
 
-</div>
+<!-- </div> -->
