méthode pour contenu dynamique des formulaires ok

--- a/src/app/form/form-inscription.component.css
+++ b/src/app/form/form-inscription.component.css
@@ -8,3 +8,12 @@
 .small.right{
   width: 60%;
 }
+
+.registerPage1,
+.registerPage2,
+registerPage3 {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+}
