--- a/src/app/suppliers/suppliers-inscription.component.html
+++ b/src/app/suppliers/suppliers-inscription.component.html
@@ -1,93 +1,138 @@
 <div class="container-inscription">
 
-    <!-- Modal form-->
-<div id="modal">
-    
-    
-  <div class="headerModal d-flex-row">
-    <div class="d-flex-column">
-      <!-- Title -->
-      <div class="titleForm">
-        <h3 class="title bold">Je m'inscris</h3>
-        <p class="title">Comme entreprise RSE</p>
-      </div>
-      <!-- Subtitle -->
-      <div class="subtitleForm" *ngIf="currentPage === 'inscription1'">
-        <p class="subtitle bold">Etape 1/5</p>
-        <p class="subtitle">Coordonées de l'entreprise</p>
+  <!-- Modal form-->
+  <div id="modal">
+      
+      
+    <div class="headerModal d-flex-row">
+      <div class="d-flex-column">
+        <!-- Title -->
+        <div class="titleForm">
+          <h3 class="title bold">Je m'inscris</h3>
+          <p class="title">Comme entreprise RSE</p>
+        </div>
+        <!-- Subtitle -->
+        <div class="subtitleForm" *ngIf="currentPage === 'inscription1'">
+          <p class="subtitle bold">Etape 1/4</p>
+          <p class="subtitle">Coordonées de l'entreprise</p>
+        </div>
+
+        <div class="subtitleForm" *ngIf="currentPage === 'inscription2'">
+          <p class="subtitle bold">Etape 2/4</p>
+          <p class="subtitle">Activité(s) de l'entreprise</p>
+        </div>
+
+        <div class="subtitleForm" *ngIf="currentPage === 'inscription3'">
+          <p class="subtitle bold">Etape 3/4</p>
+          <p class="subtitle">Labels et normes de l'Entreprise</p>
+        </div>
+
+        <div class="subtitleForm" *ngIf="currentPage === 'inscription4'">
+          <p class="subtitle bold">Etape 4/4</p>
+          <p class="subtitle">Adhésion à la charte RSE AVR34</p>
+        </div>
       </div>
 
-      <div class="subtitleForm" *ngIf="currentPage === 'inscription2'">
-        <p class="subtitle bold">Etape 2/5</p>
-        <p class="subtitle">Activité(s) de l'entreprise</p>
-      </div>
+      <!-- Close modal button -->
+      <button md-dialog-close id="btnClose">
+          <i class="fa fa-times fa-2x" aria-hidden="true"></i>
+      </button>
 
-      <div class="subtitleForm" *ngIf="currentPage === 'inscription3'">
-        <p class="subtitle bold">Etape 3/5</p>
-        <p class="subtitle">Labels et normes de l'netreprise</p>
-      </div>
     </div>
 
-    <!-- Close modal button -->
-    <div id="btnClose"></div>
+    <!-- Form -->
+    <form action="index.html" method="post" *ngIf="currentPage !== 'inscription5'">
+
+      <!-- inscription Etape1 -->
+      <div class="inscription1" *ngIf="currentPage === 'inscription1'">
+
+        <div class="formElement large">
+          <label for="name">Nom de l'entreprise</label>
+          <input type="text" name="name">
+        </div>
+
+        <div class="formElement large">
+          <label class="largeElem" for="adress">Adresse</label>
+          <input class="largeElem" type="text" name="adress">
+        </div>
+
+        <div class="formElement small left">
+          <label class="cp" for="cp">Code postal</label>
+          <input  class="cp" type="text" name="cp">
+        </div>
+
+        <div class="formElement small right">
+          <label  class="city" for="city">Ville</label>
+          <input  class="city" type="text" name="city">
+        </div>
+
+        <div class="formElement small left">
+          <label  class="tel" for="tel">Téléphone</label>
+          <input  class="tel" type="tel" name="tel">
+        </div>
+
+        <div class="formElement small right">
+          <label  class="mail" for="mail">Mail</label>
+          <input  class="mail" type="email" name="mail">
+        </div>
+
+        <a class="btn-submit" (click)="goToPage('inscription2')">etape suivante</a>
+
+      </div>
+
+      <!-- inscription Etape2 -->
+      <div class="inscription2" *ngIf="currentPage === 'inscription2'">
+
+        <div class="formElement large row">
+          <label for="switch">Je me déplace</label>
+          <!-- Rounded switch -->
+          <label class="switch">
+            <input type="checkbox">
+            <div class="slider round"></div>
+          </label>
+        </div>
+
+        
+
+        <div class="formElement large dropdown">
+            <select>
+                <option value="volvo">Volvo</option>
+                <option value="saab">Saab</option>
+                <option value="opel">Opel</option>
+                <option value="audi">Audi</option>
+              </select>
+          <!-- <input type="text" name="activities" placeholder="Activité(s)"> -->
+        </div>
+        
+        <a  class="btn-submit" (click)="goToPage('inscription3')">etape suivante</a>
+      </div>
+
+      <!-- inscription Etape3 -->
+      <div class="inscription3" *ngIf="currentPage === 'inscription3'">
+        Page 3          
+        <a  class="btn-submit" (click)="goToPage('inscription4')">etape suivante</a>
+      </div>
+
+      <!-- inscription Etape4 -->
+      <div class="inscription4" *ngIf="currentPage === 'inscription4'">
+        Page 3          
+        <button class="btn-submit" (click)="goToPage('inscription5')" type="submit">Enregistrer</button>
+      </div>
+
+      <!-- <input class="btn-submit large" type="submit" name="btn-submit" value="etape suivante">
+      <a  class="btn-submit" (click)="goToPage('page2')">etape suivante</a> -->
+      
+    </form>
+
+    <!-- inscription Etape5 -->
+    <div class="inscription5" *ngIf="currentPage === 'inscription5'">
+      <div class="endingMessage">
+        <p class="confirmation">Inscription terminée !</p>
+        <p class="message">Vous recevrez par mail une notification concernant la validation de votre inscription et votre enregistrement au réseau AVR34</p>
+        <button class="btn-submit close" md-dialog-close >quitter</button>
+      </div>            
+    </div>
 
   </div>
-
-  <!-- Form -->
-  <form action="index.html" method="post" ng-show='!my-var'>
-
-    <div class="inscription1" *ngIf="currentPage === 'inscription1'">
-
-      <div class="formElement large">
-        <label for="name">Nom de l'entreprise</label>
-        <input type="text" name="name">
-      </div>
-
-      <div class="formElement large">
-        <label class="largeElem" for="adress">Adresse</label>
-        <input class="largeElem" type="text" name="adress">
-      </div>
-
-      <div class="formElement small left">
-        <label class="cp" for="cp">Code postal</label>
-        <input  class="cp" type="text" name="cp">
-      </div>
-
-      <div class="formElement small right">
-        <label  class="city" for="city">Ville</label>
-        <input  class="city" type="text" name="city">
-      </div>
-
-      <div class="formElement small left">
-        <label  class="tel" for="tel">Téléphone</label>
-        <input  class="tel" type="tel" name="tel">
-      </div>
-
-      <div class="formElement small right">
-        <label  class="mail" for="mail">Mail</label>
-        <input  class="mail" type="email" name="mail">
-      </div>
-
-      <a class="btn-submit" (click)="goToPage('inscription2')">etape suivante</a>
-
-    </div>
-
-    <!-- inscription2 -->
-
-    <div class="inscription2" *ngIf="currentPage === 'inscription2'">
-      Page 2
-      <a  class="btn-submit" (click)="goToPage('inscription3')">etape suivante</a>
-    </div>
-    <div class="inscription3" *ngIf="currentPage === 'inscription3'">
-      Page 3          
-      <button class="btn-submit" type="submit">Enregistrer</button>
-    </div>
-
-    <!-- <input class="btn-submit large" type="submit" name="btn-submit" value="etape suivante">
-    <a  class="btn-submit" (click)="goToPage('page2')">etape suivante</a> -->
-    
-
-  </form>
-</div>
       
 </div>
